--- a/prob1_2024/distrib2.html
+++ b/prob1_2024/distrib2.html
@@ -1036,6 +1036,24 @@ completing the proof.
 <b><i>[QED]</i></b>
 </p>
 
+<p></p>
+This theorem is often interpreted as: number of rare events follows Poisson distribution. This is
+ more of a myth than anything real. But since it is very popular belief, let me explain how this
+ interpretation arises:
+<blockquote>
+Consider accidents occuring at a crossing. Everytime two cars come close, there is a chance of an
+ accident. But most of the time an accident  does not occur. So we may think of "two cars coming close" as a "coin toss"
+ and an "accident" as "head". Since accidents are rare, we shall consider $P(H)$  to be very small. Also at a busy crossing
+ two cars often come close, <i>i.e.</i>, the coin is being tossed a large number of times. With this interpretation the nuber of
+ accidents should follow $Binom(n,\theta)$   distribution with large $n$  and small $\theta.$  Hence $Poisson(\lambda)$ 
+ with $\lambda=n \theta$  should be a good approximation.
+</blockquote>
+This interpretation is clearly an over-simplification of the situation. However, this myth is fuelled by a well-known (and
+ useless) data set regarding number of deaths of Prussian soldiers  by kicks of their own
+ horses. Here is a <a href="horsekick.csv">data set</a>. This form os death is pretty rare (thankfully!). If we make
+ a bar plot of the relative frequencies, we get a very good match with a Poisson distribution.
+<p></p>
+
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
 
