--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -372,22 +372,22 @@ Consider another gambling game.
 <p>
 <b>EXAMPLE 3:</b>&nbsp;
 A fair die is rolled. I shall pay you Rs 10 if the die shows an
-even number, you'll pay me Rs 20 otherwise. Again, let's denote
-by $X$ your gain (in Rs). Express $X$ as a function from $\{1,2,3,4,5,6\}$  to ${\mathbb R}.$
-Let $A = \{10\}.$ Find $X ^{-1} (A)$ and using it
-find $P(X\in A).$ 
+even number, you'll pay me Rs 20 otherwise. Let's denote
+by $Y$ your gain (in Rs). Express $Y$ as a function from $\{1,2,3,4,5,6\}$  to ${\mathbb R}.$
+Let $A = \{10\}.$ Find $Y ^{-1} (A)$ and using it
+find $P(Y\in A).$ 
 <p></p>
 <b>SOLUTION:</b>
-Here $X ^{-1}(A) = \{2,4,6\}.$ So $P(X=10) = P(\{2,4,6\}) = \frac 16+\frac 16+\frac 16 = \frac 12.$
+Here $Y^{-1}(A) = \{2,4,6\}.$ So $P(Y=10) = P(\{2,4,6\}) = \frac 16+\frac 16+\frac 16 = \frac 12.$
  ■
 </p>
 
 <p></p>
-In each of  these examples we had a random variable $X$ that
-took only two values $10$ and $-20.$ Which $X$ do
-you think is more profitable for you? Well, both are actually the
-same so far as profit goes. Understand this carefully: the two
-different $X$'s are completely different as functions (their
+In each of  these examples we had a random variable  that
+took only two values $10$ and $-20.$ Which random variable do
+you think is more profitable for you, $X$  or $Y$? Well, both are actually the
+same so far as profit goes. Understand this carefully: $X$  and $Y$
+ are completely different as functions (their
 domains are also different), but in terms of the "behaviour of the
 output" of the functions they are identical. This "behaviour of the output" is
 called the <b><font color="red" size="40">distribution</font></b> of the random variable. It is the
@@ -1445,7 +1445,14 @@ you rearrange the terms.
  make this expectation exceed 1?
 <p><a
 href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
-class="ans" id="lab3"> Expected number of days of the year which are  birthdays of exactly $k$  people is $\binom{n}{k}\frac{364^{n-k}}{365^{n-1}}.$
+class="ans" id="lab3"> 
+Let $X_i = \left\{\begin{array}{ll}1&\text{if }\mbox{exactly $k$ people have birthdays on day} i\\ 0&\text{otherwise.}\end{array}\right..$
+<p></p>
+Then $X = \sum_1^{365} X_i.$  
+<p></p>
+So $E(X) = \sum_1^{365} E(X_i).$
+<p></p>
+Expected number of days of the year which are  birthdays of exactly $k$  people is $\binom{n}{k}\frac{364^{n-k}}{365^{n-1}}.$
 <p></p>
 Expected number of multiple birthdays is $365\left\{1-\left(\frac{364}{365}\right)^n + \frac{n\times 364^{n-1}}{365^n}\right\}.$
 </div></p>
