--- a/prob1_2024/rv2.html
+++ b/prob1_2024/rv2.html
@@ -577,7 +577,7 @@ class="ans" id="lab3">
 For $f(x)$  to be a PMF we need 
 $$f(1)+\cdots+f(N)=1.$$
 Hence 
-$$c = \frac{1}{2^N-2}.$$
+$$c = \frac{1}{2^{N+1}-2}.$$
 So
 $$E(X) = \sum_1^N x f(x) = c\sum_1^N x 2^x = ...$$
 Similarly, you can find $V(X).$
@@ -614,7 +614,7 @@ Then $X_1,...,X_n$  is an SRSWR of size $n$  from $\{1,...,12\}.$
 <p></p>
 Let $U = \max\{X_1,...,x_{n+1}\}$  and $V = \max\{X_1,...,x_n\}.$
 <p></p>
-Then $U = \max\{V,X_n\} \geq V.$
+Then $U = \max\{V,X_{n+1}\} \geq V.$
 <p></p>
 So $E(U)\geq E(V).$
 <p></p>
