--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1503,7 +1503,7 @@ $P(X=i) = \frac{^5P_{i-1}\times 5\times (10-i)!}{10!}$  for $i=1,2,3,4,5,6.$  Th
 
 <p><a
 href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
-class="ans" id="lab6">If $n$  is even, then all even values between $-n$  and $n.$  If $n$  is
+class="ans" id="lab6">If $n$  is even, then all even values between $0$  and $n.$  If $n$  is
  odd, then all the odd values in the same range.</div></p>
 
 </p>
@@ -2072,9 +2072,9 @@ href="javascript:hideShow('lab24')"><b>Hint:</b></a><div
 class="ans" id="lab24">
 Let $X=$ number of cards required to be turned. 
 <p></p>
-Then $P(X=k) = q^{k-1}p$  for $k=1,2,3,...$  where $p=\frac{4}{52}$  and $q=1-p.$
+Then $P(X=k)=\frac{4\times {}^48P_{k-1}(52-k)!}{52!}.$
 <p></p>
-So $E(X) =\sum_{k=1}^\infty k q^{k-1}p = \frac 1p  = 13.$
+So
 </div></p>
 
 </p>
