--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -849,13 +849,38 @@ $X_1 = $  outcome of a roll of a fair die. $X_2$  is obtained from $X_1$  by
 <b>EXERCISE 32:</b>&nbsp;<img width="" src="image/morecond20.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 33:</b>&nbsp;<img width="" src="image/morecond21.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 33:</b>&nbsp;<img width="" src="image/morecond21.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab22')"><b>Hint:</b></a><div
+class="ans" id="lab22">
+Let $X_i$  be the indicator for $i$-th red ball being a win. 
+<p></p>
+There are $\binom{2n}{n}$  sequences of $n$  R's and $n$  B's in all. Let us count
+ how many of these lead to  $\{X_i=1\}.$ 
+<p></p>
+Split each such sequence into two parts, the part before the $i$-th R, and the part after.
+ For instance, for $n=4$  and $i=3$   the sequence RRBRBRBB is split as <font color="#ff0000">RRB</font>R<font color="#0000ff">BRBB</font>. 
+<p></p>
+For general $n$  and $i,$  the red part must consist of exactly $i-1$  R's and at
+ most $i-1$  B's. The blue part consists of exactly $n-i$  R's and the remaining B's. 
+<p></p>
+Let $N_{r,b} = $  number of sequences with exactly $r$  R's and $b$  B's. In other words, $N_{r,b} =\binom{r+b}{r} = \binom{r+b}{b}. $
+<p></p>
+Then, for any sequence in $\{X_i=1\}$  the red part may be selected in 
+$$\sum_{j=0}^{i-1} \binom{i-1}{j}$$
+ways. Here $j$  denotes the number of B's in the red part. Once we count the matching number
+ of blue parts for each value of $j$, we get the size of $\{X_i=1\}$  as
+$$\sum_{j=0}^{i-1} \binom{i-1}{j}\binom{2n-i-j}{n-j}.$$
+Now you should be able to complete the rest.     
+</div></p>
+
+<hr>
 </p>
 ::<p>
 <b>EXERCISE 34:</b>&nbsp;<img width="" src="image/morecond22.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab22')"><b>Hint:</b></a><div
-class="ans" id="lab22">
+href="javascript:hideShow('lab23')"><b>Hint:</b></a><div
+class="ans" id="lab23">
 (a) Let's take an example with $n=10$  and $k=3.$  We are showing the selected balls in red:
 <blockquote>
 1 <font color="#ff0000">2 3</font> 4 5 <font color="#ff0000">6</font> 7 8 9 10
