--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -868,7 +868,7 @@ Let $N_{r,b} = $  number of sequences with exactly $r$  R's and $b$  B's. In oth
 <p></p>
 Then, for any sequence in $\{X_i=1\}$  the red part may be selected in 
 $$\sum_{j=0}^{i-1} \binom{i-1}{j}$$
-ways. Here $j$  denotes the number of B's in the red part. Once we count the matching number
+ways. Here $j$  denotes the number of B's in the red part. Once we also count the matching number
  of blue parts for each value of $j$, we get the size of $\{X_i=1\}$  as
 $$\sum_{j=0}^{i-1} \binom{i-1}{j}\binom{2n-i-j}{n-j}.$$
 Now you should be able to complete the rest.     
