--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -867,11 +867,13 @@ For general $n$  and $i,$  the red part must consist of exactly $i-1$  R's and a
 Let $N_{r,b} = $  number of sequences with exactly $r$  R's and $b$  B's. In other words, $N_{r,b} =\binom{r+b}{r} = \binom{r+b}{b}. $
 <p></p>
 Then, for any sequence in $\{X_i=1\}$  the red part may be selected in 
-$$\sum_{j=0}^{i-1} \binom{i-1}{j}$$
+$$\sum_{j=0}^{i-1} \binom{i+j-1}{j}$$
 ways. Here $j$  denotes the number of B's in the red part. Once we also count the matching number
  of blue parts for each value of $j$, we get the size of $\{X_i=1\}$  as
-$$\sum_{j=0}^{i-1} \binom{i-1}{j}\binom{2n-i-j}{n-j}.$$
+$$\sum_{j=0}^{i-1} \binom{i+j-1}{j}\binom{2n-i-j}{n-j}.$$
 Now you should be able to complete the rest.     
+<p></p>
+[Thanks to Arnab Nayak for correcting a typo.]
 </div></p>
 
 <hr>
