--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -501,13 +501,13 @@ href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
 class="ans" id="lab5">
 (a) Let $U = \min(X,Y).$   Then $U$  can take values $0,...,N.$  
 <p></p>
-$P(U=k) = P(U\geq k-1)-P(U\geq k).$
+$P(U=k) = P(U\geq k)-P(U\geq k+1).$
 <p></p>
-Now $P(U\geq k) = P(X,Y\geq k) = P(X\geq k)P(Y\geq k) = \left(\frac{N-k+1}{N}\right)^2.$
+Now $P(U\geq k) = P(X,Y\geq k) = P(X\geq k)P(Y\geq k) = \left(\frac{N-k+1}{N+1}\right)^2.$
 <p></p>
-Similarly, $P(U\geq k-1) = \left(\frac{N-k+2}{N}\right)^2.$
+Similarly, $P(U\geq k+1) = \left(\frac{N-k}{N+1}\right)^2.$
 <p></p>
-So $P(U=k) = \left(\frac{(N-k+2)^2-(N-k+1)^2}{N^2} = \frac{2N-2k+3}{N^2}.$
+So $P(U=k) = \frac{(N-k)^2-(N-k+1)^2}{(N+1)^2} = ... .$
 <p></p>
 (b) Let $T = \max(X,Y).$   Then $T$  can take values $0,...,N.$  
 <p></p>
@@ -567,7 +567,7 @@ class="ans" id="lab7">
 <p></p>
 We consider the random experiment of dropping the balls one by one into the boxes. For each ball have $r $ posible destinations.
 <p></p>
-So $|\Omega| = (2r)^r.$
+So $|\Omega| = r^{2r}.$
 <p></p>
 Now fix some $(x_1,...,x_r)$  as above. The event $A=\{(X_1,...,X_r) = (x_1,...,x_r)\}$  may be obtained as follows.
 <p></p>
