--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1278,7 +1278,24 @@ $$
 
 <p>
 <b><i>Proof:</i></b>
-Another three step proof. Give it a try.
+Another three step proof. The first and third steps are pretty easy. The second step is tricky. 
+We shall give the details  next semester. But here are the main substeps for the the second step:
+<ul>
+<li>
+<b>Substep 1:</b>  We can show that for any non-negative random variable, $Z$, we have an non-decreasing 
+ sequence of simple random variables $(W_n)$  such that $W_n\nearrow Z.$</li>
+
+<li>
+<b>Substep 2:</b>  We can show that if we have any sequence $(W_n)$  and any nonnegative random
+ variable $Z$  with $W_n\nearrow Z$, then $E(W_n)\rightarrow Z.$</li>
+
+<li>
+<b>Substep 3:</b>  We apply the above two substeps to both $X$  and $Y$  to obtains
+ non-decreasing sequences $(U_n)$  and $(V_n)$  such that $E(U_n)\rightarrow E(X)$  and
+ $E(V_n)\rightarrow E(Y).$  Since $U_n+V_n\nearrow X+Y$, the result follows from the simple case.</li>
+
+</ul> 
+
 <b><i>[QED]</i></b>
 </p>
 
@@ -1454,7 +1471,9 @@ So $E(X) = \sum_1^{365} E(X_i).$
 <p></p>
 Expected number of days of the year which are  birthdays of exactly $k$  people is $\binom{n}{k}\frac{364^{n-k}}{365^{n-1}}.$
 <p></p>
-Expected number of multiple birthdays is $365\left\{1-\left(\frac{364}{365}\right)^n + \frac{n\times 364^{n-1}}{365^n}\right\}.$
+Expected number of multiple birthdays is $365\left\{1-\left(\frac{364}{365}\right)^n - \frac{n\times 364^{n-1}}{365^n}\right\}.$
+<p></p>
+[Corrected a typo thanks to Ahan Mukherjee.]
 </div></p>
 
 </p>
