--- a/prob1_2024/distrib1.html
+++ b/prob1_2024/distrib1.html
@@ -257,8 +257,7 @@ P(Y=1)+P(Y=3)=\frac14+\frac14=\frac12.$
 <p></p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 1:</b>&nbsp;
 $X$ follows <b>DUnif</b>$\{1,2,3,4,5\}$ distribution. Find the
 following probabilities.
@@ -295,8 +294,7 @@ class="ans" id="lab1"><ol>
 </ol></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 2:</b>&nbsp;
 $U$ is a <b>DUnif</b>$\{-2,-1,0,1,2\}$ random variable. Find the
 following probabilities.
@@ -325,8 +323,7 @@ class="ans" id="lab2"><ol>
 </ol></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 3:</b>&nbsp;
 Express the distributions of the following random variables in terms of the
 discrete uniform distribution.
@@ -408,8 +405,7 @@ Hence, $Var(X) = E(X^2)-(E(X))^2 = \frac{n^2-1}{12}.$
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 4:</b>&nbsp;
 If $Y$ has <b>DUnif</b>$\{0,1,...,n\}$ distribution, then compute 
 $E(Y)$ and $Var(Y).$ But before you start algebraic
@@ -618,8 +614,7 @@ $$
 $$
 which is the binomial PMF.
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 5:</b>&nbsp;
 List all the possible outcomes of $n=4$ tosses having exactly
 $x=2$ heads. For example, one possible outcome is $HTHT.$ How
@@ -648,8 +643,7 @@ P(U=2)&amp;=&amp;{5\choose2}\left(\frac14\right)^2\left(1-\frac14\right)^{5-2}\\
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 6:</b>&nbsp;
 $Y$ is distributed as <b>Bin</b>$(4,\frac23).$ Find the following
 probabilities.
@@ -679,8 +673,7 @@ class="ans" id="lab6"><ol>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 7:</b>&nbsp;
 $Z\sim$<b>Bin</b>$(5,\frac12).$ Find the following.
 <ol>
@@ -709,8 +702,7 @@ class="ans" id="lab7"><ol>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 8:</b>&nbsp;
 If $X$ has <b>Bin</b>$(100,0.5)$ distribution. Then find $a\neq37$ such
 that $$
@@ -747,8 +739,7 @@ the number of `1' s. Hence $X$ has <b>Bin</b>(6, 0.4) distribution.
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 9:</b>&nbsp;
 In the above example let $Y$ be the number of girls. What is the
 distribution of $Y$? 
@@ -908,8 +899,7 @@ $V\sim$<b>Bin</b>$(6,0.1)?$
 <p></p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 10:</b>&nbsp;
 If $X_1,X_2$ and $X_3$ are independent random variables with 
 <b>Bin</b>$(5,\frac13),$ <b>Bin</b>$(10,\frac13)$ and
@@ -1015,8 +1005,7 @@ So $P(Y=2) = \frac35.$
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 11:</b>&nbsp;
 $X$ is known to follow <b>HypGeom</b>$(10,4,8).$ Find the following
 probabilities.
@@ -1050,8 +1039,7 @@ class="ans" id="lab11"><ol>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 12:</b>&nbsp;
 Suppose that $Y$ has <b>HypGeom</b>$(100,30,40)$ distribution and $Z$ has 
 <b>HypGeom</b>$(100,70,40)$ distribution. Then which of the following two
@@ -1140,8 +1128,7 @@ Var(X) &amp;=&amp; E(X^2) - (E(X))^2 \\
        &amp;=&amp; \frac{(N-M)(N-n)Mn}{N^2(N-1)}.
 \end{eqnarray*}$$
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 13:</b>&nbsp;
 Compute $E(X)$ and $Var(X)$ where $X$ has <b>HypGeom</b>$(N,M,n)$
 distribution with
@@ -1237,8 +1224,7 @@ Hence the result.
 name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 14:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1250,8 +1236,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 15:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1263,8 +1248,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 16:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1276,8 +1260,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 17:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1289,8 +1272,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 18:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1302,8 +1284,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 19:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1315,8 +1296,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 20:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1328,8 +1308,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 21:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1341,8 +1320,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 22:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1354,8 +1332,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 23:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1367,8 +1344,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 24:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1380,8 +1356,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 25:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1393,8 +1368,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 26:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1406,8 +1380,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 27:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1419,8 +1392,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 28:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1432,8 +1404,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 29:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1444,9 +1415,21 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
-</p>
 
-<p>
+<p><a
+href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+class="ans" id="lab14">
+Let $X_i$  be indicator for there being a changeover at position $i$  for $i=2,...,n.$  By definition, there
+ cannot be a changeover at $i=1.$  
+<p></p>
+Then the answer is $\sum_2^n E(X_i). $  Now $X_i = 1$  iff the $(i-1)$-th and
+ $i$-th tosses result in either $HT$  or $TH.$  
+<p></p>
+So $E(X_i) = \cdots.$
+</div></p>
+
+</p>
+::<p>
 <b>EXERCISE 30:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1458,8 +1441,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 31:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1471,8 +1453,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 32:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1484,8 +1465,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 33:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1497,8 +1477,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 34:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1510,8 +1489,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 35:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1523,8 +1501,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 36:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1536,13 +1513,11 @@ name="Problems for practice">Problems for practice</a></h1>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 37:</b>&nbsp;At a party $N$ men throw their hats into a corner, and
 each man picks up a hat randomly. Let $X$ be the number of
 men who get their own hats. Find $E(X)$ and $V(X).$</p>
-
-<p>
+::<p>
 <b>EXERCISE 38:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1554,8 +1529,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 39:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1567,8 +1541,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 40:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1580,8 +1553,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 41:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1593,8 +1565,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 42:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1606,8 +1577,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 43:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1619,8 +1589,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 44:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1632,8 +1601,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 45:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1645,8 +1613,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 46:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1658,8 +1625,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 47:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1671,8 +1637,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 48:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1684,8 +1649,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 49:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1697,8 +1661,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 50:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1710,8 +1673,7 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 51:</b>&nbsp;<center>
 <table width="100%">
 <tr>
