--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -147,21 +147,74 @@ function myFunction() {
 <h3>Table of contents</h3>
 <ul>
 <li>
-<a href="#Uncountable sample space">Uncountable sample space</a>
+<a href="#Multivariate normal and related distributions">Multivariate normal and related distributions</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Multivariate normal">Multivariate normal</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Nonsingular">Nonsingular</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Singular">Singular</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Properties">Properties</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Related distributions">Related distributions</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#$\chi^2$  distribution">$\chi^2$  distribution</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#$t$  distribution">$t$  distribution</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#$F$  distribution">$F$  distribution</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Sampling distributions for normal sample">Sampling distributions for normal sample</a>
 </li>
 </ul>
 <hr/>
 <h1><a
-name="Uncountable sample space">Uncountable sample space</a></h1>
-We have already seen last semester that for an uncountable $\Omega$  we may not always be able
- to define a function $P:{\mathcal P}(\Omega)\rightarrow[0,1]$ 
- satisfying all the probability axioms.  Please see <a href="../prob1_2024/vitali.html">this page
- from the last semester</a>  to brush up on this. 
+name="Multivariate normal and related distributions">Multivariate normal and related distributions</a></h1>
+
+<h2><a
+name="Multivariate normal">Multivariate normal</a></h2>
+
+<h3><a
+name="Nonsingular">Nonsingular</a></h3>
+
+<h3><a
+name="Singular">Singular</a></h3>
+
 <p></p>
-Hence we defined $\sigma$-algebra. While the simplest $\sigma$-algebras are the trivial one and the entore power
- set, the most commonly used is the Borel $\sigma$-algebra. 
+
+<h3><a
+name="Properties">Properties</a></h3>
+Affine transform. Uncorrelated iff independent. IID normal sample.
 <p></p>
-Closely related to this is the idea of a measurable function.
+
+<h2><a
+name="Related distributions">Related distributions</a></h2>
+
+<h3><a
+name="$\chi^2$  distribution">$\chi^2$  distribution</a></h3>
+
+<h3><a
+name="$t$  distribution">$t$  distribution</a></h3>
+
+<h3><a
+name="$F$  distribution">$F$  distribution</a></h3>
+
+<p></p>
+
+<h2><a
+name="Sampling distributions for normal sample">Sampling distributions for normal sample</a></h2>
+
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
